Fix to <select> readability in certain states. Closes #705.

--- a/src/less/colors-intrinsic.less
+++ b/src/less/colors-intrinsic.less
@@ -222,8 +222,9 @@
             color: @baseWhite;
             background-color: @accentColor;
         }
-        &:hover {
+        &:hover, &:active {
             background-color: fade(@baseBlack, 20%);
+            color: @baseBlack;
         }
     }
 
